[gd_scene load_steps=11 format=3 uid="uid://brfago4fxe7fp"]

[ext_resource type="PackedScene" uid="uid://ofgyhkajy7qp" path="res://player.tscn" id="1_i5sts"]
[ext_resource type="Script" path="res://test_scene.gd" id="1_j5fym"]
[ext_resource type="PackedScene" uid="uid://5a1yuyr6kcpr" path="res://green_enemy.tscn" id="2_bclyy"]
[ext_resource type="PackedScene" uid="uid://bdtp2suf5do83" path="res://enemy_one.tscn" id="2_vt0f1"]
[ext_resource type="PackedScene" uid="uid://coclpmmj4jpro" path="res://asteroid.tscn" id="3_k2qyb"]
[ext_resource type="PackedScene" uid="uid://co58fv0qwjltu" path="res://hud.tscn" id="4_dnlo1"]
[ext_resource type="Texture2D" uid="uid://cavxi0xprph6l" path="res://Backgrounds/nebula_one.png" id="6_ryi1y"]
[ext_resource type="PackedScene" uid="uid://cqnnho8sfmjo4" path="res://enemy_two.tscn" id="6_x88bc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hy85n"]
size = Vector2(117, 421)

[sub_resource type="Curve2D" id="Curve2D_qn8j5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 651, 12, 0, 0, 0, 0, 651, 330)
}
point_count = 2

[node name="TestScene" type="Node"]
script = ExtResource("1_j5fym")
enemy_one = ExtResource("2_vt0f1")
asteroid_scene = ExtResource("3_k2qyb")
enemy_two_scene = ExtResource("6_x88bc")
green_enenmy = ExtResource("2_bclyy")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(640, 2.08165e-12)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_right = 640.0
offset_bottom = 360.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_ryi1y")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("1_i5sts")]
position = Vector2(31, 172)

[node name="HUD" parent="." instance=ExtResource("4_dnlo1")]

[node name="EnemyOneSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StageTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnemyTwoSpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="GreenEnemyTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="BaseArea" type="Area2D" parent="."]
position = Vector2(-171, 371)
collision_mask = 6

[node name="BaseCollisionShape2D" type="CollisionShape2D" parent="BaseArea"]
position = Vector2(103, -179.5)
shape = SubResource("RectangleShape2D_hy85n")

[node name="EnemySpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_qn8j5")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2(651, 12)
rotation = 1.5708

[connection signal="timeout" from="EnemyOneSpawnTimer" to="." method="_on_enemy_one_spawn_timer_timeout"]
[connection signal="timeout" from="StageTimer" to="." method="_on_stage_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="EnemyTwoSpawnTimer" to="." method="_on_enemy_two_spawn_timer_timeout"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_asteroid_timer_timeout"]
[connection signal="timeout" from="GreenEnemyTimer" to="." method="_on_green_enemy_timer_timeout"]
[connection signal="body_entered" from="BaseArea" to="." method="_on_base_area_body_entered"]
